bk_ida/gccida/g1/initializer_constant_valid_p
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/initializer_constant_valid_p/src/varasm.c:4775:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v7; // r12 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/initializer_constant_valid_p/src/varasm.c:4780:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *elements; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/initializer_constant_valid_p/src/varasm.c:4799:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v31; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/initializer_constant_valid_p/src/varasm.c:4802:6: error: use of undeclared identifier 'lang_hooks_0'; did you mean 'lang_hooks'?
v3 = lang_hooks_0.expand_constant( value); 
     ^~~~~~~~~~~~
     lang_hooks
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/initializer_constant_valid_p/src/langhooks.h:168:32: note: 'lang_hooks' declared here
extern const struct lang_hooks lang_hooks;
                               ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/initializer_constant_valid_p/src/varasm.c:4802:34: error: called object type '<dependent type>' is not a function or function pointer
v3 = lang_hooks_0.expand_constant( value); 
                                 ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/initializer_constant_valid_p/src/varasm.c:4838:7: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v27 = mode_class_0[( *( _BYTE *)( *( _QWORD *)( v26 + 8) + 61LL) >> 1) & 0x7F] & 0xFFFFFFFD; 
      ^~~~~~~~~~~~
      mode_class
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/initializer_constant_valid_p/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/initializer_constant_valid_p/src/varasm.c:4853:7: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v30 = mode_class_0[( *( _BYTE *)( *( _QWORD *)( v29 + 8) + 61LL) >> 1) & 0x7F] & 0xFFFFFFFD; 
      ^~~~~~~~~~~~
      mode_class
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/initializer_constant_valid_p/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/initializer_constant_valid_p/src/varasm.c:4912:19: error: expected expression
if ( ( tree_node *)*( &global_trees + 14) != v7 ) 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/initializer_constant_valid_p/src/varasm.c:4912:8: error: use of undeclared identifier 'tree_node'
if ( ( tree_node *)*( &global_trees + 14) != v7 ) 
       ^
9 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/initializer_constant_valid_p/src/obj/varasm.o] Error 1
